--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     width: 100px;
     height: 100px;
 };
+.startTimeClass {
+
+};
+#contest {
+          
+};
+#timing {
+
+}
 .heading {
     color:teal;
     font-size: 50;
@@ -22,13 +31,14 @@ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .button {
     border: none;
-  color:white;
-  padding: 10px 23px;
+  padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  background-color:#4CAF50;
+  margin: 4px 2px;
+  cursor: pointer;
+  background-color: #4CAF50;
 }
 .select {
 display: inline-block;
@@ -39,5 +49,14 @@ color: #74646e;
 border: 1px solid #ccc;
 border-radius: 5px;
 box-shadow: 1px 1px 2px #999;
+background: #eee;
+}
+
+.label {
+    text-align:center;
+    display: inline-block;
+height: 30px;
+width: 150px;
+color: #74646e;
 background: #eee;
 }
